--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,8 @@ steps:
        from_secret: CHAT_ID
      SOURCE:
        from_secret: SOURCE
+     GH_TOKEN:
+       from_secret: GH_TOKEN
    commands:
       - cd /drone/src
       - bash Setup.sh
